list(APPEND MSBASIC_SOURCES init.S tables.s workspace.s command.S evaluate.S float.s evaluate2.S)

add_executable(msbasic-searle ${MSBASIC_SOURCES})
target_compile_definitions(msbasic-searle PRIVATE BUILD_GRANTS_ORIGINAL)
z80_add_linker_script(msbasic-searle PRIVATE link.x)
target_link_options(msbasic-searle PRIVATE --defsym=kORG=0x0150 --defsym=kWRKSPC=0x2045)
z80_globalize_symbols(msbasic-searle)
z80_executable(msbasic-searle)

add_executable(msbasic-2000-4000 ${MSBASIC_SOURCES})
z80_add_linker_script(msbasic-2000-4000 PRIVATE link.x)
target_link_options(msbasic-2000-4000 PRIVATE --defsym=kORG=0x2000 --defsym=kWRKSPC=0x4000)
z80_globalize_symbols(msbasic-2000-4000)
z80_executable(msbasic-2000-4000)

add_executable(msbasic-2000-8000 ${MSBASIC_SOURCES})
z80_add_linker_script(msbasic-2000-8000 PRIVATE link.x)
target_link_options(msbasic-2000-8000 PRIVATE --defsym=kORG=0x2000 --defsym=kWRKSPC=0x8000)
z80_globalize_symbols(msbasic-2000-8000)
z80_executable(msbasic-2000-8000)

add_executable(msbasic-8000-a000 ${MSBASIC_SOURCES})
z80_add_linker_script(msbasic-8000-a000 PRIVATE link.x)
target_link_options(msbasic-8000-a000 PRIVATE --defsym=kORG=0x8000 --defsym=kWRKSPC=0xa000)
z80_globalize_symbols(msbasic-8000-a000)
z80_executable(msbasic-8000-a000)
